[SQONE-275] Fix tags spacing issue

--- a/wp-content/themes/core/components/tags_list/css/tags_list.pcss
+++ b/wp-content/themes/core/components/tags_list/css/tags_list.pcss
@@ -9,5 +9,5 @@
 }
 
 .c-tags-list__list_item {
-	margin-right: 11px;
+	margin: 0 11px 11px 0;
 }
